@@ -1,0 +1,9 @@
+<header>Apply limit to</header>
+
+This field lets you select if the limits on the number of concurrent backups
+applies to those by domain owners only, or to the master administrator as well.
+The the former case, backups run by <tt>root</tt> will still count towards
+the running limit. <p>
+
+<footer>
+
