@@ -1,0 +1,12 @@
+<header>Maximum concurrent backups</header>
+
+To prevent multiple backups from running at the same time and overloading
+your system's IO and CPU capacities, Virtualmin can limit the number of backups
+that will run at the same time. If this limit is exceeded, additional backups
+will either immediately fail, or wait until others have completed. <p>
+
+This can be useful if you allow system owners to schedule their own backups,
+and find they have a tendency to all run at the same time. <p>
+
+<footer>
+
