@@ -1,0 +1,9 @@
+<header>Backup types to limit</header>
+
+By default, only scheduled backups are subject to limits on the number run
+at once. However, if this field is changed to <b>Scheduled and manual</b>, 
+even those started from the command line or within the Virtualmin UI will
+be restricted. <p>
+
+<footer>
+
