@@ -1,0 +1,10 @@
+<header>Time to wait if maximum is exceeded</header>
+
+If this is set to <b>Halt immediately</b> and a backup is started that would
+exceed the limit, it will fail at once. Alternately, you can enter a number
+of seconds to wait for other backups to complete before continuing. If that
+timeout is exceeded and too many backups are still running, the new one
+will fail. <p>
+
+<footer>
+
