@@ -2128,6 +2128,10 @@ backup_purgeesshls=.. failed to list directory via SSH : $1
 backup_deletingssh=Deleting file $1 via SSH, which is $2 days old ..
 backup_edelssh=.. SSH deletion failed : $1
 backup_fromvirt=Sent by Virtualmin at: $1
+backup_maxhit=There are currently $1 backups running, and the system-wide limit is $2
+backup_waiting=Waiting for the number of running backups to drop below the system limit of $1 ..
+backup_waited=.. backup can now proceed
+backup_waitfailed=.. gave up waiting after $1 seconds
 
 restore_title=Restore Virtual Servers
 restore_header=Options for restoring backup
