@@ -254,6 +254,8 @@ $scheduled_backups_dir = "$module_config_directory/backups";
 
 $backup_locks_dir = "$module_config_directory/backuplocks";
 
+$backup_maxes_file = "$module_config_directory/backupsrunning";
+
 $incremental_backups_dir = "$module_config_directory/incremental";
 
 $backups_log_dir = "$module_config_directory/backuplogs";
